# webasm_scripting

./: Cargo.toml  README.md
data/: particle.c  quad.frag  quad.vert  snow.c  spark.c  test.wasm
src/: error.rs  frame.rs  main.rs  upload.rs  vm.rs  world.rs
